--- a/style.css
+++ b/style.css
@@ -4,87 +4,37 @@
     box-sizing: border-box;
 }
 
-body {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-}
-
 header {
-    flex-basis: 10%;
-    background-image: linear-gradient(20deg, blue, white);
+    display: block;
+    height: 50px;
 }
 
-header nav {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height: 100%;
-    border-bottom: 1px solid gray;
-}
-
-header button {
-    padding: 10px 30px;
-    background-color: #fff;
-    border: 1px solid gray;
-    border-radius: 7px;
-    font-family: arial;
-    text-transform: uppercase;
-    outline: none;
-    transition: .2s;
-    cursor: pointer;
-    /* animation: move linear .3s infinite; */
-}
-
-header button:hover {
-    box-shadow: 0 0 2px yellow, 0 0 10px yellow;
-    background-color: blue;
-    color: white;
-}
-
-header span {
-    font-family: arial;
-    font-size: 25px;
-    text-shadow: 2px 2px 5px gray;
+header button.btn {
+    display: block;
+    margin: 10px auto;
+    padding: 5px 30px;
 }
 
 section {
     display: flex;
-    flex-grow: 1;
     flex-wrap: wrap;
-    /* background-color: #aaa; */
+    align-content: stretch;
+    height: 93vh;
+    width: 100%;
 }
 
 section div {
     flex-basis: 15%;
     flex-grow: 1;
     background-color: #000;
-    border: 1px solid gray;
+    border: 1px solid white;
 }
 
 @media (orientation: portrait){
     section div {
-        flex-basis: 33.33%;
+        flex-basis: 33.3%;
     }
 }
-
-/* @keyframes move {
-    
-    0%{
-        margin-left: 20px
-    }
-    5%{margin-left: 0}
-    10%{margin-right: 20px}
-
-    50%{margin-left: 0}
-
-    90%{margin-left: 20px}
-    95%{margin-left: 0px}
-    100%{margin-left: -20px}
-    }
-} */
-
-
 
 .red {
     background-color: red;
