--- a/style.css
+++ b/style.css
@@ -43,6 +43,10 @@ section div {
         display: block;
         height: 5vh;
     }
+    
+    section {
+        height: 80%
+       } 
 
     header button.btn {
         display: block;
