--- a/style.css
+++ b/style.css
@@ -44,8 +44,8 @@ section div {
         height: 5vh;
     }
     
-    section {
-        height: 80%
+    body{
+        height: 90vh
        } 
 
     header button.btn {
