--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ section div {
 
 
     header button.btn {
-        display: block;
+        display: none;
         padding-left:40px;
         padding-right:40px;
         font-size: 1.5rem;
